--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
-    "morgan": "^1.10.0"
+    "jest": "^26.6.3",
+    "morgan": "^1.10.0",
+    "supertest": "^6.0.1"
   }
 }
